<resources>
    <string name="app_name">ShareList</string>
    <string name="sharelist">ShareList</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="Register">Register</string>
    <string name="Create_Account">Create Account</string>
    <string name="Password">Password</string>
    <string name="Phone_number">Phone Number</string>
    <string name="User_name">User Name</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_Email">Email</string>
    <string name="add_group">Add Group</string>
    <string name="update">Update</string>
    <string name="update_group_name">Update Group Name</string>
    <string name="update_description">Update Description</string>
    <string name="update_due_date">Update Due Date</string>
    <string name="update_assigned_users">Update Assigned Users</string>
    <string name="search_groups">Search Groups</string>
    <string name="add_task">Add Task</string>
    <string name="group_search">Group Search</string>
    <string name="group_name">Group Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="due_date">Due Date</string>
    <string name="name">Name</string>
    <string name="mark_as_completed">Mark as Completed</string>
    <string name="description">Description</string>
    <string name="create_group_corner_menu">createGroupCornerMenu</string>
    <string name="account">Account</string>
    <string name="group_info">Group Info</string>
    <string name="leave_group">Leave Group</string>
    <string name="share_list">Share List</string>
    <string name="assigned_to">Assigned to:</string>
    <string name="enter_user_email">Enter User Email</string>
    <string name="update_task_contents">Update Task Contents</string>
    <string name="assign_user_to_task">Assign User To Task</string>
    <string name="remove_task">Remove Task</string>
    <string name="view_assigned_users">View Assigned Users</string>
    <string name="assign_user">Assign User</string>
    <string name="un_assign_user">Unassign User</string>
    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="add_admin">Add Admin</string>
    <string name="delete_group">Delete Group</string>
    <string name="remove_assigned_user">Remove Assigned User</string>
    <string name="ok">OK</string>
    <string name="total_group_admins">Total group admins:</string>
    <string name="total_users">Total users:</string>
    <string name="total_tasks">Total tasks:</string>
    <string name="completed_tasks">Completed Tasks:</string>
    <string name="remaining_tasks">Remaining Tasks:</string>
    <string name="rename_group">Rename Group</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="search">Search</string>
    <string name="search_tasks">Search Tasks</string>
    <string name="remove_admin">Remove Admin</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unmark">Unmark</string>
</resources>