<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/groupInfoUserNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_condensed_light"
        android:paddingBottom="3dp"
        android:text="@string/leave_group"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.324"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/groupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_condensed_light"
        android:text="group name"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@id/groupInfoUserNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/groupInfoAdminNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_light"
        android:paddingBottom="3dp"
        android:text="@string/are_you_sure_you_want_to_exit"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupInfoUserNumber" />

    <TextView
        android:id="@+id/groupAdminCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_light"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@id/groupInfoAdminNumber"
        app:layout_constraintTop_toBottomOf="@id/groupInfoUserNumber" />

    <Button
        android:id="@+id/leaveGroupOKButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/yes"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupAdminCount"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/leaveGroupCancelButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/no"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupAdminCount"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>